samples/_failures_safe/1761349298_81e978_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bba2a1db.c: In function ‘main’:
./samples/SAFE/__tmp_bba2a1db.c:137:5: error: expected declaration or statement at end of input
  137 |     }
      |     ^
